--- a/DhaliProcurement/Views/VendorPayments/Edit.cshtml
+++ b/DhaliProcurement/Views/VendorPayments/Edit.cshtml
@@ -716,7 +716,7 @@
 
     $('#ProjectId').change(function () {
         var id = $('#ProjectId option:selected').val();
-        var vendorId =  $('#VendorId option:selected').val();
+        var vendorId =  $('#VendorId').val();
 
         $.ajax({
             url: "/VendorPayments/GetSites",
@@ -750,7 +750,7 @@
         var SiteId = $('#SiteId  option:selected').val();
         var ProjectId = $('#ProjectId option:selected').val();
         //alert(ProjectId);
-        var vendorId =  $('#VendorId option:selected').val();
+        var vendorId =  $('#VendorId').val();
 
         $.ajax({
             type: "post",
@@ -777,17 +777,20 @@
 
 
     $("#ReqNo").change(function () {
-        //  var SiteId = $('#SiteId  option:selected').val();
+          var SiteId = $('#SiteId  option:selected').val();
         //  var ProjectId = $('#ProjectId option:selected').val();
         var ReqNo = $('#ReqNo option:selected').val();
-        var vendorId =  $('#VendorId option:selected').val();
+        var vendorId =  $('#VendorId').val();
         //alert('ReqNo ' + ReqNo);
         //alert(ProjectId);
 
         $.ajax({
             type: "post",
             url: "/VendorPayments/GetPONo",
-            data: { ReqNo: ReqNo, vendorId:vendorId},
+            data: { ReqNo: ReqNo
+                , vendorId:vendorId,
+                SiteId :SiteId
+                },
             datatype: "json",
             traditional: true,
             success: function (data) {
