--- a/DhaliProcurement/Views/PurchaseOrders/Edit.cshtml
+++ b/DhaliProcurement/Views/PurchaseOrders/Edit.cshtml
@@ -26,6 +26,7 @@
                             <td>PO No</td>
                             <td>
                                 <input type="text" value="@ViewBag.PONo" class="form-control" id="PONo"/>
+                                <input type="hidden" value="@ViewBag.PONoId" id="PONoId" />
                             </td>
                             <td>PO Date</td>
                             <td>
@@ -41,7 +42,7 @@
                             <td>
 
                                 <input type="text" value="@ViewBag.ProjectName" class="form-control datepicker" disabled="disabled" id="ProjectName"/>
-
+                                <input type="hidden" value="@ViewBag.ProjectId" id="ProjectId" />
                             </td>
 
                         </tr>
@@ -49,6 +50,7 @@
                             <td>Site Name</td>
                             <td>
                                 <input type="text" value="@ViewBag.SiteName" class="form-control datepicker" disabled="disabled" id="SiteName"/>
+                                <input type="hidden" value="@ViewBag.SiteId" id="SiteId" />
                             </td>
                         </tr>
 
@@ -75,7 +77,7 @@
                         <tr>
                             <td>Tender No</td>
                             <td>
-                                @Html.DropDownList("TenderId", null, "--Select--", htmlAttributes: new { @id = "TenderId", @class = "form-control select2" , disabled = "disabled" })
+                                @Html.DropDownList("TenderId", null, "--Select--", htmlAttributes: new { @id = "TenderId", @class = "form-control select2", disabled = "disabled" })
                                 @Html.ValidationMessage("TenderId", "", new { @class = "text-danger" })
                             </td>
                         </tr>
@@ -155,7 +157,7 @@
                     </table>
                     <hr />
 
-                }
+                @*}*@
 
 
                 <div class="details well" style=" border 1px solid black;">
@@ -248,15 +250,27 @@
                         </tfoot>
                     </table>
                 </div>
+
+
+                <div class="form-group">
+                    <div class="col-md-12" style="text-align:center;">
+                        <button type="button" id="SaveItem" class="btn btn-success"><i class="icon-floppy-disk position-left"></i>  Update</button>
+                        <button type="button" id="GenReport" class="btn btn-primary"><i class="icon-add position-left"></i>  Generate Report</button>
+                    </div>
+                </div>
+
+
+
+                }
+
             </div>
         </div>
     </div>
-    <div class="form-group">
+    @*<div class="form-group">
         <div class="col-md-12" style="text-align:center;">
-            @*@Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info", @style = "background-color: grey;border: none;" })*@
-            <button type="button" id="SaveItem" class="btn btn-success" @*style = "background-color: grey;border: none;"*@><i class="icon-floppy-disk position-left"></i>  Update</button>
+            <button type="button" id="SaveItem" class="btn btn-success"><i class="icon-floppy-disk position-left"></i>  Update</button>
         </div>
-    </div>
+    </div>*@
 </div>
 
 <!-- Modal -->
@@ -578,7 +592,7 @@
                 console.log(data);
                 for (var i = 0; i < data.length; i++) {
                     //alert(data[i].ItemName);
-                    var newRow = jQuery('<tr><td><input value="' + data[i].ItemId + '" type="hidden" name="ItemId"/> <input class="form-control" value="' + data[i].ItemName + '" readonly="true" type="text" name="ItemName1"/></td>'
+                    var newRow = jQuery('<tr><td><input value="' + data[i].PurchaseOrderDetId + '" type="hidden" name="PurchaseOrderDetId"/><input value="' + data[i].ItemId + '" type="hidden" name="ItemId"/> <input class="form-control" value="' + data[i].ItemName + '" readonly="true" type="text" name="ItemName1"/></td>'
                         +'<td><input value="' + data[i].UnitId + '" type="hidden" name="UnitId"/><input class="form-control" value="' + data[i].UnitName + '" readonly="true" type="text" name="UnitName"/></td>'
                      +'<td><input class="form-control" value="' + data[i].Size + '" type="text" name="Size" readonly="true"' +
                      '"/></td><td><input class="form-control UnitPriceNew" value="' + data[i].UnitPrice + '"  type="text" name="UnitPrice" readonly="true"/></td>'
@@ -790,7 +804,7 @@
         //}
 
         //alert('ItemId ' + ItemId);
-        //var ItemName = document.getElementsByName("ItemName");
+        var PurchaseOrderDetId = document.getElementsByName("PurchaseOrderDetId");
         var UnitId = document.getElementsByName("UnitId");
       //  alert('UnitId ' + UnitId);
 
@@ -824,7 +838,7 @@
                 POQuantity: POQuantity[i].value,
                 TotalPrice: TotalPrice[i].value,
                 ProcPurchaseMasterId :ProcPurchaseMasterId,
-              //  ProcPurchaseDetId :ProcPurchaseDetId
+                ProcPurchaseDetId :PurchaseOrderDetId[i].value
             });
 
             console.log('---------->');
@@ -990,6 +1004,75 @@
         });
     }
 
+
+
+
+
+
+    //11 feb 18
+    $('#GenReport').click(function (e) {
+       
+        GenerateReportPurchaseOrder();
+        
+    });
+
+
+
+    function GenerateReportPurchaseOrder(){
+        var ProjectId = $("#ProjectId").val();
+        //alert('ProjectId: '+ProjectId);
+        var SiteId = $("#SiteId").val();
+        //alert('SiteId: '+SiteId);
+      
+        var VendorId = $("#VendorId").val();
+        //alert('VendorId: '+VendorId);
+      
+        var PONoId = $("#PONoId").val();
+        //alert('PONoId: '+PONoId);
+      
+        //PurchaseReport = JSON.stringify({
+        //    ProjectId: ProjectId,
+        //    SiteId:SiteId,
+        //    VendorId:VendorId,
+        //    PONoId:PONoId
+           
+        //});
+        
+        //alert('/Report/PurchaseOrderReportGet/?ProjectId=' + ProjectId + '&SiteId='+ SiteId +'&PONo= '+ PONoId +'&VendorId= ' + VendorId);
+
+        window.open('/Report/PurchaseOrderReportGet/?ProjectId=' + ProjectId + '&SiteId='+ SiteId +'&PONo='+ PONoId +'&VendorId=' + VendorId , '_blank');
+
+        //debugger;
+        
+        
+        //$.ajax({
+            
+        //    contentType: 'application/json; charset=utf-8',
+        //    dataType: 'json',
+        //    type: 'POST',
+        //    url: '/PurchaseOrders/PurchaseOrderReports',
+        //    data: PurchaseReport,
+        //    success: function (result) {
+        //        //debugger;
+        //        // alert('test 2')
+        //        // console.log(result);
+        //        //if (result.flag === true) {
+        //           // alert("Record Delete successfully!");
+        //            // window.location.replace("/PurchaseOrders/PurchaseOrderReports");
+        //            alert(result.flag);
+        //     //   }
+        //     //   else {
+        //     //       alert(result.message);
+        //   //     }
+
+        //    },
+        //    failure: function (response) {
+        //        alert('error');
+        //    }
+        //});
+    }
+
+    //end
 
 
 
