--- a/DhaliProcurement/Views/Shared/_Layout.cshtml
+++ b/DhaliProcurement/Views/Shared/_Layout.cshtml
@@ -223,7 +223,10 @@
                                         <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Report" && ViewContext.RouteData.Values["Action"].ToString() == "VendorPayment" ? "active" : "")"><a href="@Url.Action("VendorPayment", "Report")">Vendor Payment</a></li>
                                         <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Report" && ViewContext.RouteData.Values["Action"].ToString() == "TenderInformation" ? "active" : "")"><a href="@Url.Action("TenderInformation", "Report")">Tender Information</a></li>
                                         <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Report" && ViewContext.RouteData.Values["Action"].ToString() == "TenderInformationAccepted" ? "active" : "")"><a href="@Url.Action("TenderInformationAccepted", "Report")">Accepted Tender</a></li>
-                                    </ul>
+                                        <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Report" && ViewContext.RouteData.Values["Action"].ToString() == "VendorPaymentItemWise" ? "active" : "")"><a href="@Url.Action("VendorPaymentItemWise", "Report")">Vendor Payment Item-Wise Report</a></li>
+
+                                         
+                                      </ul>
                                 </li>
                                 @*<li><a href="@Url.Action("StatusSlide","ProjectStatusSlideShow")"><i class="fa fa-film "></i> <span>Slide Show</span></a></li>*@
                                 <li>
