--- a/DhaliProcurement/Views/MaterialsEntry/Edit.cshtml
+++ b/DhaliProcurement/Views/MaterialsEntry/Edit.cshtml
@@ -445,8 +445,8 @@
 
                     $('.deleteDetailTask').click(function (e) {
                         e.preventDefault();
-                        var retVal = confirm("Do you want to delete this Item ?");
-                        if (retVal == true) {
+                        //var retVal = confirm("Do you want to delete this Item ?");
+                        //if (retVal == true) {
                             var row = $(this).closest('tr');
                             var itemDetId = $(this).closest('tr').find('td input[name=TenderDetailId]').val();
                             @*var ProcPurchaseMasterId= @ViewBag.ProcPurchaseMasterId;*@
@@ -480,10 +480,10 @@
                                 }
                             });
 
-                        }
-                        else {
-                            return false;
-                        }
+                        //}
+                        //else {
+                        //    return false;
+                        //}
 
                     });
 
