--- a/DhaliProcurement/Views/ProcProjects/Edit.cshtml
+++ b/DhaliProcurement/Views/ProcProjects/Edit.cshtml
@@ -389,8 +389,8 @@
 
                 $('.deleteDetailTask').click(function (e) {
                     e.preventDefault();
-                    var retVal = confirm("Do you want to delete this Item ?");
-                    if (retVal == true) {
+                    //var retVal = confirm("Do you want to delete this Item ?");
+                    //if (retVal == true) {
                         var row = $(this).closest('tr');
                         var itemDetId = $(this).closest('tr').find('td input[name=ItemId]').val();
                         //alert(itemDetId);
@@ -429,10 +429,10 @@
                             }
                         });
 
-                    }
-                    else {
-                        return false;
-                    }
+                    //}
+                    //else {
+                    //    return false;
+                    //}
 
                 });
 
