--- a/DhaliProcurement/Views/VendorPayments/Edit.cshtml
+++ b/DhaliProcurement/Views/VendorPayments/Edit.cshtml
@@ -424,8 +424,8 @@
 
                 $('.deleteDetailTask').click(function (e) {
                     e.preventDefault();
-                    var retVal = confirm("Do you want to delete this Item ?");
-                    if (retVal == true) {
+                    //var retVal = confirm("Do you want to delete this Item ?");
+                    //if (retVal == true) {
                         var row = $(this).closest('tr');
                         var itemDetId = $(this).closest('tr').find('td input[name=Proc_VendorPaymentDetId]').val();  
                         //alert(itemDetId);
@@ -457,10 +457,10 @@
                             }
                         });
 
-                    }
-                    else {
-                        return false;
-                    }
+                    //}
+                    //else {
+                    //    return false;
+                    //}
 
                 });
 
